use CDN for vexflow

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <canvas id="canvas" />
-  <script src="node_modules/vexflow/releases/vexflow-min.js"></script>
+  <script src="https://unpkg.com/vexflow@latest/releases/vexflow-min.js"></script>
   <script>
     var offscreen = new OffscreenCanvas(500, 500);
 
